2013-01-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ext2.c (grub_ext2_read_block): Use shifts rather than
	divisions.

2013-01-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ntfs.c: Eliminate useless divisions in favor of shifts.
	* grub-core/fs/ntfscomp.c: Likewise.
	* include/grub/ntfs.h (grub_ntfs_data): Replace spc with log_spc.
	(grub_ntfs_comp): Likewise.

2013-01-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/nilfs2.c (-grub_nilfs2_palloc_groups_per_desc_block):
	Rename to ...
	(grub_nilfs2_palloc_log_groups_per_desc_block): ... this. Return log
	of groups_per_block. All users updated.

2013-01-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_write): Call
	grub_error properly.
	* grub-core/disk/ieee1275/nand.c (grub_nand_write): Likewise.
	* grub-core/disk/loopback.c (grub_loopback_write): Likewise.

2013-01-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/10_kfreebsd.in: Correct the patch to zpool.cache as it's
	always in /boot/zfs.
	Reported by: Yuta Satoh.

2013-01-03  Yuta Satoh  <nigoro>

	* util/grub.d/10_kfreebsd.in: Fix improper references to grub-probe by
	${grub_probe}

2013-01-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Extend -Wno-trampolines to host.

2013-01-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/iso9660.c (grub_iso9660_susp_iterate): Avoid hang if
	entry->len = 0.

2013-01-03  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Invoking grub-mkrelpath): New section.
	(Invoking grub-script-check): Likewise.

2013-01-03  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Invoking grub-mount): New section.
	Reported by: Filipus Klutiero.  Fixes Debian bug #666427.

2013-01-02  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/tests/lib/test.c (grub_test_run): Return non-zero on
	test failures, so that a failing unit test correctly causes 'make
	check' to fail.
