@@ -1,3 +1,7 @@
+2013-01-07  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/fs/minix.c (grub_minix_read_file): Simplify arithmetics.
+
 2013-01-05  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/fs/ext2.c (grub_ext2_read_block): Use shifts rather than
